# mtg-deck-builder

./: .gitignore  Cargo.toml  README.md
import/: example.mtg
src/: database.rs  main.rs  sql.rs
